@@ -57,7 +57,7 @@ public class McpServerRunner implements CommandLineRunner {
         };
 
         McpSyncServer server = McpServer.sync(transport)
-                .serverInfo("notify-hub", "1.0.0")
+                .serverInfo("notify-hub", "0.9.0")
                 .capabilities(ServerCapabilities.builder()
                         .tools(true)
                         .build())
@@ -82,6 +82,9 @@ public class McpServerRunner implements CommandLineRunner {
         server.addTool(new SendInstagramTool(notifyHub).specification(jsonMapper));
         server.addTool(new SendTikTokShopTool(notifyHub).specification(jsonMapper));
         server.addTool(new SendFacebookTool(notifyHub).specification(jsonMapper));
+        server.addTool(new SendAwsSnsTool(notifyHub).specification(jsonMapper));
+        server.addTool(new SendMailgunTool(notifyHub).specification(jsonMapper));
+        server.addTool(new SendPagerDutyTool(notifyHub).specification(jsonMapper));
         server.addTool(new SendMultiChannelTool(notifyHub).specification(jsonMapper));
         server.addTool(new ListChannelsTool(notifyHub).specification(jsonMapper));
         server.addTool(new ListDeliveryReceiptsTool(notifyHub).specification(jsonMapper));
@@ -107,12 +110,10 @@ public class McpServerRunner implements CommandLineRunner {
         server.addTool(new ListScheduledNotificationsTool(schedulingRegistry).specification(jsonMapper));
         server.addTool(new CancelScheduledNotificationTool(schedulingRegistry).specification(jsonMapper));
 
-        log.info("NotifyHub MCP Server ready");
+        log.info("NotifyHub MCP Server ready — 36 tools registered");
 
         // Check for updates in background (non-blocking, max once per day)
-        Thread updateThread = new Thread(this::checkForUpdatesQuietly, "update-checker");
-        updateThread.setDaemon(true);
-        updateThread.start();
+        Thread.ofVirtual().name("update-checker").start(this::checkForUpdatesQuietly);
 
         // Keep the process alive — MCP STDIO transport needs the JVM running
         Runtime.getRuntime().addShutdownHook(new Thread(keepAlive::countDown));
